--- a/ILeavePortal/Views/Home/Index.cshtml
+++ b/ILeavePortal/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
         <div class="d-flex justify-content-center h-100">
             <div class="card">
                 <div class="card-header">
-                    <h3>Log in</h3>
+                    <h3>Login</h3>
                     @* <div class="d-flex justify-content-end social_icon">
                     <span><i class="fab fa-facebook-square"></i></span>
                     <span><i class="fab fa-google-plus-square"></i></span>
@@ -45,7 +45,7 @@
                             </div>
                             <input type="password" class="form-control" id="Password" placeholder="password">
                         </div>
-                        <@* div class="row align-items-center remember">
+                        @* <div class="row align-items-center remember">
                             <input type="checkbox">Remember Me
                             </div> *@
                         <div class="form-group">
@@ -68,8 +68,7 @@
 </body>
 </html>
 
-
-<script src="~/js/Login.js"></script>
+<script src="~/js/login.js"></script>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js"></script>
